--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,825 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
+}
+.app {
+    background:  rgb(241, 238, 238);
+    width: 100%;
+    min-height: 100vh;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* Navbar */
+
+.navbar {
+    display: flex;
+    background: white;
+    align-items: center;
+    position: sticky;
+    top: 0;
+    z-index: 2;
+}
+.navbar div {
+    display: flex;
+    padding: 4px 30px;
+}
+
+.navbar div h1 {
+    font-size: 2.2rem;
+    font-weight: 560;
+    margin: 12px 4px;
+}
+
+.navbar ul {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    padding: 0px 100px;
+    margin-left: 140px;
+    list-style: none;
+    transition: 300ms;
+}
+
+
+.navbar ul li:nth-child(1) {
+    margin: 10px 0px;
+}
+
+.navbar ul li:nth-child(2) {
+    background: rgba(185, 27, 199, 0.185);
+    padding: 0.6rem 1rem;
+    border-radius: 20px;
+}
+.navbar ul li:nth-child(2) a {
+    color: rgb(185, 27, 199);
+
+}
+.navbar ul li a {
+    text-decoration: none;
+    color: black;
+    font-size: 1.2rem;
+}
+
+
+.navbar ul li:nth-child(2) {
+    text-decoration: none;
+    color: black;
+    font-size: 1.2rem;
+    margin-right: -70px;
+}
+
+.navbar ul li a .icon {
+    font-size: 2.3rem;
+    margin: -6px 15px;
+}
+
+/* Home */
+
+.home .middle {
+    margin: -620px 410px;
+    width: 65%;
+    transition: 300ms;
+}
+
+.home .products {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    justify-content: space-between;
+    margin: 30px 30px;
+    width: calc(100%  0px);
+
+}
+
+.home .toggle-products {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    justify-content: space-between;
+    margin: 30px 30px;
+    width: calc(100%  0px);
+}
+
+.home .products .card {
+    background: white;
+    height: 300px;
+    margin: 50px 35px;
+    border-radius: 30px;
+    text-align: center;
+    padding: 40px 10px;
+    width: calc(100% - 150px);
+    overflow: hidden;
+
+}
+
+.home .products .card img {
+    /* width: 300px; */
+    width: calc(100% - 0px);
+
+    
+}
+.home .products .card h2 {
+    font-size: 1.6rem;
+    color: rgba(71, 69, 69, 0.774);
+}
+
+.home .products .card h3 {
+    color: rgb(30, 173, 30);
+    font-size: 1.4rem;
+    padding: 10px;
+
+}
+
+.home .products .card a {
+    text-decoration: none;
+    border: transparent;
+    font-size: 1rem;
+    background: white;
+    color: black;
+    padding: 0.4rem 1rem;
+    filter: drop-shadow(2px 2px 2px #666);
+    border-radius: 30px;
+    z-index: -1;
+} 
+
+
+.home .products .card div {
+    position: relative;
+    top: -30px;
+    left: 200px;
+    width: 100px;
+    height: 100px;
+    background:  rgba(185, 27, 199, 0.26);
+    border-radius: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    transition: 300ms;
+}
+
+.home .products .card div:hover {
+    opacity: 1;
+}  
+
+.home .products .card .icon {
+    font-size: 2rem;
+    color: rgb(185, 27, 199);
+}
+
+/* toggle-products */
+
+.home .toggle-middle {
+    margin: -560px 210px;
+    width: 85%;
+    transition: 300ms;
+}
+
+.home .toggle-products {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    justify-content: space-between;
+    margin: 30px 30px;
+    width: calc(100%  0px);
+} 
+
+.home .toggle-products .card {
+    background: white;
+    height: 300px;
+    margin: 50px 35px;
+    border-radius: 30px;
+    text-align: center;
+    padding: 40px 10px;
+    width: calc(100% - 150px);
+    overflow: hidden;
+
+}
+
+.home .toggle-products .card img {
+    /* width: 300px; */
+    width: calc(100% - 0px);
+
+    
+}
+.home .toggle-products .card h2 {
+    font-size: 1.6rem;
+    color: rgba(71, 69, 69, 0.774);
+}
+
+.home .toggle-products .card h3 {
+    color: rgb(30, 173, 30);
+    font-size: 1.4rem;
+    padding: 10px;
+
+}
+
+.home .toggle-products .card a {
+    text-decoration: none;
+    border: transparent;
+    font-size: 1rem;
+    background: white;
+    color: black;
+    padding: 0.4rem 1rem;
+    filter: drop-shadow(2px 2px 2px #666);
+    border-radius: 30px;
+    z-index: -1;
+} 
+
+
+.home .toggle-products .card div {
+    position: relative;
+    top: -30px;
+    left: 200px;
+    width: 100px;
+    height: 100px;
+    background:  rgba(185, 27, 199, 0.26);
+    border-radius: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    transition: 300ms;
+}
+
+.home .toggle-products .card div:hover {
+    opacity: 1;
+}  
+
+.home .toggle-products .card .icon {
+    font-size: 2rem;
+    color: rgb(185, 27, 199);
+}
+
+
+.toggle-dropdown {
+    font-size: 1.4rem;
+    position: sticky;
+    transform: translate(580px, -170px);
+    border-radius: 40px;
+    padding: 0.5rem 3rem;
+    z-index: 2;
+    top: 190px;
+}
+
+/* Home  Sidebar*/
+ 
+.home .sidebar {
+    width: 287px;
+    background: white;
+    min-height: 600px;
+    position: sticky;
+    top: 84px;
+    margin-bottom: -45px;
+    display: flex;
+    justify-content: center; 
+    transition: 300ms;
+}
+
+
+.home .sidebar .brands .brand {
+    display: flex;
+    margin: 35px 40px;
+    cursor: pointer;
+    color: gray;
+    padding: 0.8rem 0.9rem;
+    align-items: center;
+    border-radius: 10px;
+    justify-content: flex-start;
+}
+
+.active {
+    background:  rgb(241, 238, 238);
+    filter:  drop-shadow(1px  1px 1px #666);;
+}
+
+.home .sidebar .brands div img {
+    margin: -30px 20px;
+    width: 50px;
+}
+
+.home .sidebar .brands div label{
+    font-size: 1.5rem;
+}
+
+.menubar {
+    position: sticky;
+    font-size: 2rem;
+    top: 170px;
+    z-index: 3;
+    transform: translate(-270px, -143px);
+    transition: 300ms;
+}
+
+.drop-down {
+    font-size: 1.4rem;
+    position: sticky;
+    transform: translate(320px, -170px);
+    border-radius: 40px;
+    padding: 0.5rem 3rem;
+    z-index: 2;
+    top: 190px;
+}
+
+
+@media only screen and (max-width: 1420px) {
+
+        
+    .home .toggle-middle {
+        margin: -560px 210px;
+        width: 80%;
+        transition: 300ms;
+    }
+
+    .home .toggle-products {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        justify-content: space-between;
+        margin: 30px 30px;
+        width: calc(100%  0px);
+        overflow-x: hidden;
+    } 
+
+    .home .toggle-products .card {
+        background: white;
+        height: 300px;
+        margin: 50px 35px;
+        border-radius: 30px;
+        text-align: center;
+        padding: 40px 10px;
+        width: calc(100% - 220px);
+        overflow: hidden;
+
+    }
+       
+
+} 
+
+@media only screen and (max-width: 1200px) {
+
+    /* Navbar */
+
+    .navbar div h1 {
+        font-size: 2.2rem;
+        font-weight: 560;
+        margin: 12px 4px;
+        display: none;
+    }
+
+       
+    .navbar ul {
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+        padding: 0px 100px;
+        margin-left: 70px;
+        list-style: none;
+        transition: 300ms;
+    } 
+
+
+        /* Home */
+    .home .middle {
+        margin: -620px 80px;
+        width: 85%;
+        transition: 300ms;
+    }
+           
+    .home .products {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        /* width: 900px; */
+        justify-content: space-between;
+        margin: 30px 30px;
+        width: calc(100%  0px);
+
+    }
+
+        
+    .home .products .card div {
+        position: relative;
+        top: 0px;
+        left: 0px;
+        width: 100px;
+        height: 100px;
+        background:  rgba(185, 27, 199, 0.26);
+        border-radius: 100px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        opacity: 0;
+        transition: 300ms;
+    }
+
+        
+    .menubar {
+        position: sticky;
+        font-size: 2rem;
+        top: 170px;
+        z-index: 3;
+        transform: translate(-100px, -143px);
+        transition: 300ms;
+    }
+
+        
+    .drop-down {
+        font-size: 1.4rem;
+        position: sticky;
+        transform: translate(500px, -170px);
+        border-radius: 40px;
+        padding: 0.5rem 3rem;
+        z-index: 2;
+        top: 190px;
+    }
+
+        
+    .home .products .card {
+        background: white;
+        height: 300px;
+        margin: 50px 145px;
+        border-radius: 30px;
+        text-align: center;
+        padding: 40px 10px;
+        width: calc(100% - 150px);
+        overflow: hidden;
+
+    }
+
+    /*  Home toggle */
+
+    .home .toggle-middle {
+        margin: -560px 210px;
+        width: 70%;
+        transition: 300ms;
+    }
+
+    .home .toggle-products {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        justify-content: space-between;
+        margin: 30px 30px;
+        width: calc(100%  0px);
+        overflow-x: hidden;
+    } 
+
+    .home .toggle-products .card {
+        background: white;
+        height: 300px;
+        margin: 50px 35px;
+        border-radius: 30px;
+        text-align: center;
+        padding: 40px 10px;
+        width: calc(100% - 120px);
+        overflow: hidden;
+
+    }
+        
+    .toggle-dropdown {
+        font-size: 1.4rem;
+        position: sticky;
+        transform: translate(380px, -170px);
+        border-radius: 40px;
+        padding: 0.5rem 3rem;
+        z-index: 2;
+        top: 190px;
+    }
+    /*  Home sidebar */
+
+    .home .sidebar {
+        width: 150px;
+        background: white;
+        min-height: 600px;
+        position: sticky;
+        top: 84px;
+        display: flex;
+        justify-content: center; 
+        transition: 300ms;
+    }
+
+    .home .sidebar .brands .brand {
+        display: flex;
+        cursor: pointer;
+        color: gray;
+        padding: 1.8rem 0.5rem;
+        align-items: center;
+        border-radius: 10px;
+        justify-content: flex-start;
+        margin: 25px 40px;
+    }
+
+    .home .sidebar .brands div label{
+        font-size: 1.5rem;
+        display: none;
+    }
+
+} 
+
+@media only screen and (max-width: 960px ) {
+
+    /* navbar */
+     
+    .navbar ul {
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+        padding: 0px 100px;
+        margin-left: 20px;
+        list-style: none;
+        transition: 300ms;
+    } 
+
+        
+    .navbar ul li:nth-child(2) {
+        text-decoration: none;
+        color: black;
+        font-size: 1.2rem;
+        margin-right: 40px;
+    }
+
+    /*  Home */
+     
+    .drop-down {
+        font-size: 1.4rem;
+        position: sticky;
+        transform: translate(320px, -90px);
+        border-radius: 40px;
+        padding: 0.5rem 3rem;
+        z-index: 2;
+        top: 190px;
+    }
+    
+    /*  Home toggle */
+
+    .home .toggle-middle {
+        margin: -560px 210px;
+        width: 70%;
+        transition: 300ms;
+    }
+
+    .home .toggle-products {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        justify-content: space-between;
+        margin: 30px 30px;
+        width: calc(100%  0px);
+        overflow-x: hidden;
+    } 
+
+    .home .toggle-products .card {
+        background: white;
+        height: 300px;
+        margin: 50px 35px;
+        border-radius: 30px;
+        text-align: center;
+        padding: 40px 10px;
+        width: calc(100% - 70px);
+        overflow: hidden;
+
+    }
+        
+    .toggle-dropdown {
+        font-size: 1.4rem;
+        position: sticky;
+        transform: translate(200px, -60px);
+        border-radius: 40px;
+        padding: 0.5rem 3rem;
+        z-index: 2;
+        top: 190px;
+    }
+
+}
+
+@media only screen and (max-width: 768px) {
+
+    /*  Navbar */
+
+    .navbar ul {
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+        padding: 0px 100px;
+        margin-left: -90px;
+        list-style: none;
+        transition: 300ms;
+    }
+
+    
+    
+        
+    .navbar ul li:nth-child(2) {
+        text-decoration: none;
+        color: black;
+        font-size: 1.2rem;
+        margin-right: -10px;
+    }
+
+
+    /* Home */
+   
+    .home .products {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        /* width: 900px; */
+        justify-content: space-between;
+        margin: 30px 30px;
+        width: calc(100%  0px);
+
+    }
+
+    
+    .home .products .card {
+        background: white;
+        height: 300px;
+        margin: 50px 180px;
+        border-radius: 30px;
+        text-align: center;
+        padding: 40px 10px;
+        width: calc(100% - 300px);
+        overflow: hidden;
+
+    }
+
+    
+
+    .home .products .card div {
+        position: relative;
+        top: 0px;
+        left: 0px;
+        width: 100px;
+        height: 100px;
+        background:  rgba(185, 27, 199, 0.26);
+        border-radius: 100px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        transition: 300ms;
+    }
+
+    .menubar {
+        position: sticky;
+        font-size: 2rem;
+        top: 170px;
+        z-index: 3;
+        transform: translate(-270px, -143px);
+        transition: 300ms;
+        display: none;
+    }
+
+    
+    .drop-down {
+        font-size: 1.4rem;
+        position: sticky;
+        transform: translate(230px, -80px);
+        border-radius: 40px;
+        padding: 0.5rem 3rem;
+        z-index: 2;
+        top: 190px;
+    }
+        /* Home toggle */
+    
+    .home .toggle-middle {
+        margin: -560px 210px;
+        width: 60%;
+        transition: 300ms;
+    }
+
+    .home .toggle-products {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        justify-content: space-between;
+        margin: 30px 30px;
+        width: calc(100%  0px);
+        overflow-x: hidden;
+    } 
+
+    .home .toggle-products .card {
+        background: white;
+        height: 300px;
+        margin: 50px 0px;
+        border-radius: 30px;
+        text-align: center;
+        padding: 40px 10px;
+        width: calc(100% - 30px);
+        overflow: hidden;
+
+    }
+        
+    .toggle-dropdown {
+        font-size: 1.4rem;
+        position: sticky;
+        transform: translate(50px, -60px);
+        border-radius: 40px;
+        padding: 0.5rem 3rem;
+        z-index: 2;
+        top: 190px;
+    }
+   
+} 
+
+@media only screen and (max-width: 560px) {
+
+    /* Navbar */
+    .navbar ul li span {
+        display: none;
+    }
+
+    
+    .navbar ul li:nth-child(2) {
+        text-decoration: none;
+        color: black;
+        font-size: 1.2rem;
+        margin-right: -60px;
+    }
+
+
+    /*  Home */
+
+    .home .products .card {
+        background: white;
+        height: 300px;
+        margin: 50px 100px;
+        border-radius: 30px;
+        text-align: center;
+        padding: 40px 10px;
+        width: calc(100% - 140px);
+        overflow: hidden;
+
+    }
+    
+    
+    .drop-down {
+        font-size: 1.4rem;
+        position: sticky;
+        transform: translate(140px, -80px);
+        border-radius: 40px;
+        padding: 0.5rem 4rem;
+        z-index: 2;
+        top: 190px;
+    }
+
+}
+
+@media only screen and (max-width: 460px) {
+    
+
+    .app {
+        background: white;
+        width: 100%;
+        min-height: 100vh;
+
+    }
+
+    /*  Navbar */
+    
+    .navbar ul li:nth-child(2) {
+        text-decoration: none;
+        color: black;
+        font-size: 1.2rem;
+        margin-right: -90px;
+    }
+
+    /* Home */
+    
+    .drop-down {
+        font-size: 1.4rem;
+        position: sticky;
+        transform: translate(110px, -80px);
+        border-radius: 40px;
+        padding: 0.5rem 1rem;
+        z-index: 2;
+        top: 196px;
+    }
+    
+    
+    .home .products .card {
+        background:  rgb(241, 238, 238);
+        height: 300px;
+        margin: 50px 80px;
+        border-radius: 30px;
+        text-align: center;
+        padding: 40px 10px;
+        width: calc(100% - 140px);
+        overflow: hidden;
+    }
+
+        
+    .home .sidebar .brands .brand {
+        display: flex;
+        margin: 35px 40px;
+        cursor: pointer;
+        color: gray;
+        padding: 1.8rem 0.4rem;
+        align-items: center;
+        border-radius: 10px;
+        justify-content: flex-start;
+    }
+
+    
+    .toggle-dropdown {
+        font-size: 1.4rem;
+        position: sticky;
+        transform: translate(10px, -20px);
+        border-radius: 40px;
+        padding: 0.5rem 3rem;
+        z-index: 2;
+        top: 90px;
+    }
+
 }
